# AirAPI_Windows

./: AirAPI_Windows.cpp  AirAPI_Windows.h  AirAPI_Windows.sln  AirAPI_Windows.vcxproj  AirAPI_Windows.vcxproj.filters  CMakeLists.txt  DepthEstimator.cpp  DepthEstimator.h  Platform.h  README.md  XRealCamera.cpp  XRealCamera.h
examples/: CameraTest.cpp  CameraTest.vcxproj
python/: README.md  xreal_dll.py  xreal_windows.py
